--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "run_test": "run-func leaderboard-generator.js run_test",
     "run_test2": "run-func leaderboard-generator.js run_test2",
     "test1": "run-func tests.js test1",
+    "test2": "run-func tests.js test2",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
