--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "run_test2": "run-func leaderboard-generator.js run_test2",
     "test1": "run-func tests.js test1",
     "test2": "run-func tests.js test2",
+    "test3": "run-func tests.js test3",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
