odds_generator zed_ch update

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "test1": "run-func tests.js test1",
     "test2": "run-func tests.js test2",
     "test3": "run-func tests.js test3",
+    "test4": "run-func tests.js test4",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
