--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "test4": "run-func tests.js test4",
     "test5": "run-func tests.js test5",
     "test6": "run-func tests.js test6",
+    "test7": "run-func tests.js test7",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
