--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "give_ranks_on_rating_blood": "run-func index-odds-generator.js give_ranks_on_rating_blood",
     "run_test": "run-func leaderboard-generator.js run_test",
     "run_test2": "run-func leaderboard-generator.js run_test2",
-    "get_all_horses_kids":  "run-func horses-kids.js get_all_horses_kids",
+    "get_all_horses_kids": "run-func horses-kids.js get_all_horses_kids",
+    "add_flames_on_all_races": "run-func zed_races_flames.js add_flames_on_all_races",
+    "a": "node zed_races_flames.js",
     "test1": "run-func tests.js test1",
     "test2": "run-func tests.js test2",
     "test3": "run-func tests.js test3",
