--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "license": "ISC",
   "dependencies": {
     "app-root-path": "^3.0.0",
+    "axios": "^0.21.4",
     "dotenv": "^10.0.0",
     "lodash": "^4.17.21",
     "mongodb": "^3.6.10",
