--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "add_horse_from_zed_in_bulk": "run-func js_code_files/zed_horse_scrape.js add_horse_from_zed_in_bulk",
     "odds_generator_all_horses": "run-func js_code_files/odds-generator-for-blood2.js odds_generator_all_horses",
     "breed_generator_all_horses": "run-func js_code_files/odds-generator-for-blood2.js breed_generator_all_horses",
+    "push_kids_score_all_horses": "run-func js_code_files/horses-kids-blood2.js push_kids_score_all_horses",
     "test1": "run-func js_code_files/tests.js test1",
     "test2": "run-func js_code_files/tests.js test2",
     "test3": "run-func js_code_files/tests.js test3",
