zed races scrape

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "zed_horses_all_scrape": "run-func js_code_files/zed_horse_scrape.js zed_horses_all_scrape",
     "zed_api_cache_runner": "run-func js_code_files/zed_api_cache_script.js zed_api_cache_runner",
     "add_horse_from_zed_in_bulk": "run-func js_code_files/zed_horse_scrape.js add_horse_from_zed_in_bulk",
+    "missing_zed_horse_tc_update": "run-func js_code_files/zed_horse_scrape.js missing_zed_horse_tc_update",
     "odds_generator_all_horses": "run-func js_code_files/odds-generator-for-blood2.js odds_generator_all_horses",
     "breed_generator_all_horses": "run-func js_code_files/odds-generator-for-blood2.js breed_generator_all_horses",
     "push_kids_score_all_horses": "run-func js_code_files/horses-kids-blood2.js push_kids_score_all_horses",
