--- a/package.json
+++ b/package.json
@@ -51,9 +51,7 @@
     "mongoose": "^5.13.9",
     "node-cron": "^3.0.0",
     "node-fetch": "^2.6.5",
+    "run-func": "^1.0.5",
     "selenium-webdriver": "^4.0.0-rc-1"
-  },
-  "devDependencies": {
-    "run-func": "^1.0.5"
   }
 }
