--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "zed_races_g_manual_run": "run-func js_code_files/zed_races.js zed_races_g_manual_run",
     "zed_horses_all_scrape": "run-func js_code_files/zed_horse_scrape.js zed_horses_all_scrape",
     "zed_horses_needed_bucket_using_hawku": "run-func js_code_files/zed_horse_scrape.js zed_horses_needed_bucket_using_hawku",
+    "zed_horses_needed_manual_using_hawku": "run-func js_code_files/zed_horse_scrape.js zed_horses_needed_manual_using_hawku",
     "zed_api_cache_runner": "run-func js_code_files/zed_api_cache_script.js zed_api_cache_runner",
     "studs_api_cache_runner": "run-func js_code_files/zed_api_cache_script.js studs_api_cache_runner",
     "add_horse_from_zed_in_bulk": "run-func js_code_files/zed_horse_scrape.js add_horse_from_zed_in_bulk",
