--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "push_kids_score_all_horses": "run-func js_code_files/horses-kids-blood2.js push_kids_score_all_horses",
     "blood_breed_z_table": "run-func js_code_files/horses-kids-blood2.js blood_breed_z_table",
     "download_hids_br_ymca": "run-func js_code_files/horses-kids-blood2.js download_hids_br_ymca",
+    "tabulate_hids_br_ymca": "run-func js_code_files/horses-kids-blood2.js tabulate_hids_br_ymca",
+    "driver_test": "run-func js_code_files/webdriver-utils.js driver_test",
     "test1": "run-func js_code_files/tests.js test1",
     "test2": "run-func js_code_files/tests.js test2",
     "test3": "run-func js_code_files/tests.js test3",
