--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
   "dependencies": {
     "app-root-path": "^3.0.0",
     "axios": "^0.21.4",
+    "chromedriver": "^94.0.0",
     "cron-parser": "^4.0.0",
     "dotenv": "^10.0.0",
     "lodash": "^4.17.21",
