--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "missing_zed_horse_tc_update": "run-func js_code_files/zed_horse_scrape.js missing_zed_horse_tc_update",
     "odds_generator_all_horses": "run-func js_code_files/odds-generator-for-blood2.js odds_generator_all_horses",
     "breed_generator_all_horses": "run-func js_code_files/odds-generator-for-blood2.js breed_generator_all_horses",
+    "blood_generator_all_horses": "run-func js_code_files/odds-generator-for-blood2.js blood_generator_all_horses",
     "breed_generator_m1_all_horses": "run-func js_code_files/odds-generator-for-blood2.js breed_generator_m1_all_horses",
     "odds_flames_generator_all_horses": "run-func js_code_files/odds-generator-for-blood2.js odds_flames_generator_all_horses",
     "breed_generator_errs": "run-func js_code_files/odds-generator-for-blood2.js breed_generator_errs",
@@ -37,6 +38,7 @@
     "download_hids_br_ymca": "run-func js_code_files/horses-kids-blood2.js download_hids_br_ymca",
     "tabulate_hids_br_ymca": "run-func js_code_files/horses-kids-blood2.js tabulate_hids_br_ymca",
     "driver_test": "run-func js_code_files/webdriver-utils.js driver_test",
+    "generate_leaderboard_b2": "run-func js_code_files/leaderboard_blood2.js generate_leaderboard_b2",
     "test1": "run-func js_code_files/tests.js test1",
     "test2": "run-func js_code_files/tests.js test2",
     "test3": "run-func js_code_files/tests.js test3",
