udpate dist obs

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "odds_generator_all_horses": "run-func js_code_files/odds-generator-for-blood2.js odds_generator_all_horses",
     "breed_generator_all_horses": "run-func js_code_files/odds-generator-for-blood2.js breed_generator_all_horses",
     "blood_generator_all_horses": "run-func js_code_files/odds-generator-for-blood2.js blood_generator_all_horses",
+    "blood_generator_dist_all_horses": "run-func js_code_files/odds-generator-for-blood2.js blood_generator_dist_all_horses",
     "breed_generator_m1_all_horses": "run-func js_code_files/odds-generator-for-blood2.js breed_generator_m1_all_horses",
     "odds_flames_generator_all_horses": "run-func js_code_files/odds-generator-for-blood2.js odds_flames_generator_all_horses",
     "breed_generator_errs": "run-func js_code_files/odds-generator-for-blood2.js breed_generator_errs",
