--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "studs_api_cache_runner": "run-func js_code_files/zed_api_cache_script.js studs_api_cache_runner",
     "add_horse_from_zed_in_bulk": "run-func js_code_files/zed_horse_scrape.js add_horse_from_zed_in_bulk",
     "missing_zed_horse_tc_update": "run-func js_code_files/zed_horse_scrape.js missing_zed_horse_tc_update",
+    "zed_horses_racing_update_odds": "run-func js_code_files/zed_horse_scrape.js zed_horses_racing_update_odds",
     "odds_generator_all_horses": "run-func js_code_files/odds-generator-for-blood2.js odds_generator_all_horses",
     "breed_generator_all_horses": "run-func js_code_files/odds-generator-for-blood2.js breed_generator_all_horses",
     "blood_generator_all_horses": "run-func js_code_files/odds-generator-for-blood2.js blood_generator_all_horses",
