zed_races_get_missings

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "zed_races_since_last_run": "run-func js_code_files/zed_races.js zed_races_since_last_run",
     "zed_races_err_manual_run": "run-func js_code_files/zed_races.js zed_races_err_manual_run",
     "zed_races_g_manual_run": "run-func js_code_files/zed_races.js zed_races_g_manual_run",
+    "zed_races_get_missings": "run-func js_code_files/zed_races.js zed_races_get_missings",
     "zed_horses_all_scrape": "run-func js_code_files/zed_horse_scrape.js zed_horses_all_scrape",
     "zed_horses_needed_bucket_using_hawku": "run-func js_code_files/zed_horse_scrape.js zed_horses_needed_bucket_using_hawku",
     "zed_horses_needed_manual_using_hawku": "run-func js_code_files/zed_horse_scrape.js zed_horses_needed_manual_using_hawku",
