--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "tabulate_hids_br_ymca": "run-func js_code_files/horses-kids-blood2.js tabulate_hids_br_ymca",
     "driver_test": "run-func js_code_files/webdriver-utils.js driver_test",
     "generate_leaderboard_b2": "run-func js_code_files/leaderboard_blood2.js generate_leaderboard_b2",
+    "fix_parents_kids_mismatch": "run-func js_code_files/parents-blood2.js fix_parents_kids_mismatch",
     "test1": "run-func js_code_files/tests.js test1",
     "test2": "run-func js_code_files/tests.js test2",
     "test3": "run-func js_code_files/tests.js test3",
