--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "get_all_horses_kids": "run-func js_code_files/horses-kids.js get_all_horses_kids",
     "add_flames_on_all_races": "run-func js_code_files/zed_races_flames.js add_flames_on_all_races",
     "zed_races_automated_script_run": "run-func js_code_files/zed_races.js zed_races_automated_script_run",
+    "zed_races_g_auto_run": "run-func js_code_files/zed_races.js zed_races_g_auto_run",
+    "zed_races_err_auto_run": "run-func js_code_files/zed_races.js zed_races_err_auto_run",
     "zed_races_specific_duration_run": "run-func js_code_files/zed_races.js zed_races_specific_duration_run",
     "zed_races_since_last_run": "run-func js_code_files/zed_races.js zed_races_since_last_run",
     "zed_races_err_manual_run": "run-func js_code_files/zed_races.js zed_races_err_manual_run",
