--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "mongoose": "^5.13.9",
     "node-cron": "^3.0.0",
     "node-fetch": "^2.6.5",
+    "prompt": "^1.2.0",
     "run-func": "^1.0.5",
     "selenium-webdriver": "^4.0.0-rc-2",
     "superagent": "^6.1.0"
