--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "zed_horses_fix_unnamed_foal": "run-func js_code_files/zed_horse_scrape.js zed_horses_fix_unnamed_foal",
     "horse_dets_test": "run-func js_code_files/zed_api_cache_script.js horse_dets_test",
     "zed_api_cache_runner": "run-func js_code_files/zed_api_cache_script.js zed_api_cache_runner",
+    "live_api_cache_runner": "run-func js_code_files/zed_api_cache_script.js zed_api_cache_runner",
     "studs_api_cache_runner": "run-func js_code_files/zed_api_cache_script.js studs_api_cache_runner",
     "add_horse_from_zed_in_bulk": "run-func js_code_files/zed_horse_scrape.js add_horse_from_zed_in_bulk",
     "missing_zed_horse_tc_update": "run-func js_code_files/zed_horse_scrape.js missing_zed_horse_tc_update",
