--- a/package.json
+++ b/package.json
@@ -50,6 +50,10 @@
     "driver_test": "run-func js_code_files/webdriver-utils.js driver_test",
     "generate_leaderboard_b2": "run-func js_code_files/leaderboard_blood2.js generate_leaderboard_b2",
     "fix_parents_kids_mismatch": "run-func js_code_files/parents-blood2.js fix_parents_kids_mismatch",
+    "zed_tour_fn": "run-func js_code_files/zed_tournament.js zed_tour_fn",
+    "zed_tour_cron": "run-func js_code_files/zed_tournament.js zed_tour_cron",
+    "zed_tour_missed_cron": "run-func js_code_files/zed_tournament.js zed_tour_missed_cron",
+    "clear_zed_tour": "run-func js_code_files/zed_tournament.js clear_zed_tour",
     "test1": "run-func js_code_files/tests.js test1",
     "test2": "run-func js_code_files/tests.js test2",
     "test3": "run-func js_code_files/tests.js test3",
