--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "run_odds_generator": "run-func js_code_files/index-odds-generator.js run_odds_generator",
     "run_blood_generator": "run-func js_code_files/index-odds-generator.js run_blood_generator",
     "run_cache_on_heroku": "run-func js_code_files/index-odds-generator.js run_cache_on_heroku",
+    "eth_runner_fn": "run-func js_code_files/base.js eth_runner_fn",
     "give_ranks_on_rating_blood": "run-func js_code_files/index-odds-generator.js give_ranks_on_rating_blood",
     "run_leaderboard": "run-func js_code_files/leaderboard-generator.js run_leaderboard",
     "run_repair_leaderboard": "run-func js_code_files/leaderboard-generator.js run_repair_leaderboard",
