--- a/package.json
+++ b/package.json
@@ -53,6 +53,8 @@
     "fix_parents_kids_mismatch": "run-func js_code_files/parents-blood2.js fix_parents_kids_mismatch",
     "zed_tour_fn": "run-func js_code_files/zed_tournament.js zed_tour_fn",
     "zed_tour_cron": "run-func js_code_files/zed_tournament.js zed_tour_cron",
+    "zed_tour_leader_fn": "run-func js_code_files/zed_tournament.js zed_tour_leader_fn",
+    "zed_tour_leader_cron": "run-func js_code_files/zed_tournament.js zed_tour_leader_cron",
     "zed_tour_missed_cron": "run-func js_code_files/zed_tournament.js zed_tour_missed_cron",
     "clear_zed_tour": "run-func js_code_files/zed_tournament.js clear_zed_tour",
     "test1": "run-func js_code_files/tests.js test1",
