leader mongo sort

--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "driver_test": "run-func js_code_files/webdriver-utils.js driver_test",
     "generate_leaderboard_b2": "run-func js_code_files/leaderboard_blood2.js generate_leaderboard_b2",
     "generate_leaderboard_b2_each_dist": "run-func js_code_files/leaderboard_blood2.js generate_leaderboard_b2_each_dist",
+    "leader_write_ranks": "run-func js_code_files/leaderboard_blood2.js leader_write_ranks",
     "leaderboard_download": "run-func js_code_files/leaderboard_blood2.js leaderboard_download",
     "fix_parents_kids_mismatch": "run-func js_code_files/parents-blood2.js fix_parents_kids_mismatch",
     "zed_tour_fn": "run-func js_code_files/zed_tournament.js zed_tour_fn",
