--- a/package.json
+++ b/package.json
@@ -67,15 +67,8 @@
     "get_parents_color_pair_chart": "run-func js_code_files/color.js get_parents_color_pair_chart",
     "get_parents_color_pair_chart_cron": "run-func js_code_files/color.js get_parents_color_pair_chart_cron",
     "horse_stats_all": "run-func js_code_files/zed_horse_stats.js horse_stats_all",
-    "clear_zed_tour": "run-func js_code_files/zed_tournament.js clear_zed_tour",
-    "test1": "run-func js_code_files/tests.js test1",
-    "test2": "run-func js_code_files/tests.js test2",
-    "test3": "run-func js_code_files/tests.js test3",
-    "test4": "run-func js_code_files/tests.js test4",
-    "test5": "run-func js_code_files/tests.js test5",
-    "test6": "run-func js_code_files/tests.js test6",
-    "test7": "run-func js_code_files/tests.js test7",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "ymca2_all": "run-func js_code_files/ymca2.js ymca2_generator_all_horses",
+    "clear_zed_tour": "run-func js_code_files/zed_tournament.js clear_zed_tour"
   },
   "keywords": [],
   "author": "",
