--- a/package.json
+++ b/package.json
@@ -79,13 +79,17 @@
     "axios": "^0.21.4",
     "chromedriver": "^94.0.0",
     "cron-parser": "^4.0.0",
+    "cronstrue": "^1.125.0",
     "dotenv": "^10.0.0",
+    "knex": "^1.0.3",
     "lodash": "^4.17.21",
     "mongodb": "^3.7.1",
     "mongoose": "^5.13.9",
     "node-cron": "^3.0.0",
     "node-fetch": "^2.6.5",
+    "pg": "^8.7.3",
     "prompt": "^1.2.0",
+    "query-string": "^7.1.1",
     "run-func": "^1.0.5",
     "selenium-webdriver": "^4.0.0-rc-2",
     "superagent": "^6.1.0"
