--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "dotenv": "^10.0.0",
     "knex": "^1.0.3",
     "lodash": "^4.17.21",
+    "moment": "^2.29.1",
     "mongodb": "^3.7.1",
     "mongoose": "^5.13.9",
     "node-cron": "^3.0.0",
