--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
     "chromedriver": "^94.0.0",
     "cron-parser": "^4.0.0",
     "cronstrue": "^1.125.0",
+    "crypto": "^1.0.1",
     "dotenv": "^10.0.0",
     "knex": "^1.0.3",
     "lodash": "^4.17.21",
