--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "cron-parser": "^4.0.0",
     "cronstrue": "^1.125.0",
     "crypto": "^1.0.1",
+    "crypto-js": "^4.1.1",
     "csv-parser": "^3.0.0",
     "dotenv": "^10.0.0",
     "fs": "^0.0.1-security",
