--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
     "dotenv": "^10.0.0",
     "fs": "^0.0.1-security",
     "googleapis": "^97.0.0",
+    "ioredis": "^5.0.6",
     "knex": "^1.0.3",
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
