--- a/package.json
+++ b/package.json
@@ -69,7 +69,8 @@
     "horse_stats_all": "run-func js_code_files/zed_horse_stats.js horse_stats_all",
     "ymca2_all": "run-func js_code_files/ymca2.js ymca2_generator_all_horses",
     "racerat2_all": "run-func js_code_files/ymca2.js racerat2_generator_all_horses",
-    "clear_zed_tour": "run-func js_code_files/zed_tournament.js clear_zed_tour"
+    "clear_zed_tour": "run-func js_code_files/zed_tournament.js clear_zed_tour",
+    "pull":"git checkout -f main ; git pull;"
   },
   "keywords": [],
   "author": "",
